fix some readability issues in mobile view

--- a/source/assets/style/common-sub-pages.css
+++ b/source/assets/style/common-sub-pages.css
@@ -114,7 +114,7 @@
   }
 
   #main-content-button-container {
-    margin-inline: 2em;
-    padding-inline: 2em;
+    margin-inline: 0px;
+    padding-inline: 5vw;
   }
 }
